# zuc1fer-cli

./: .gitignore  COMPETITIVE_PLAN.md  Cargo.toml  README.md  coding-benchmarks-report.md  package-lock.json  package.json  research-hierarchical-memory.md
.github/workflows/: ci.yml
crates/ophis-core/: Cargo.toml
crates/ophis-core/src/: agent.rs  code_index.rs  config.rs  indexer.rs  lib.rs  lsp_client.rs  lsp_tool.rs  mcp_bridge.rs  mcp_tool.rs  plugin_manager.rs  plugin_tool.rs  repomap.rs  semantic_tool.rs  session.rs  session_store.rs
crates/ophis-llm/: Cargo.toml
crates/ophis-llm/src/providers/: deepseek.rs  mod.rs  openai.rs  opencode.rs  openrouter.rs
crates/ophis-mcp/: Cargo.toml
crates/ophis-mcp/src/: client.rs  protocol.rs  transport.rs
crates/ophis-tools/: Cargo.toml
crates/ophis-tools/src/: ast_grep.rs  bash.rs  concurrent_trace.rs  edit.rs  error_parse.rs  git.rs  glob.rs  grep.rs  lib.rs  read.rs  registry.rs  webfetch.rs  websearch.rs  write.rs
crates/ophis-tui/: Cargo.toml
crates/ophis-tui/src/: ascii_art.rs  lib.rs  theme.rs
crates/zuc1fer-core/: Cargo.toml
crates/zuc1fer-core/src/: agent.rs  config.rs  indexer.rs  lib.rs  lsp_client.rs  lsp_tool.rs  mcp_bridge.rs  mcp_tool.rs  plugin_manager.rs  plugin_tool.rs  repomap.rs  semantic_tool.rs  session.rs  session_store.rs  ts_parser.rs
crates/zuc1fer-llm/: Cargo.toml
crates/zuc1fer-llm/src/: lib.rs  sse.rs
crates/zuc1fer-llm/src/providers/: anthropic.rs  deepseek.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
crates/zuc1fer-mcp/: Cargo.toml
crates/zuc1fer-mcp/src/: client.rs  lib.rs  protocol.rs  transport.rs
crates/zuc1fer-search/: Cargo.toml
crates/zuc1fer-search/src/: glob.rs  grep.rs  lib.rs
crates/zuc1fer-tools/: Cargo.toml
crates/zuc1fer-tools/src/: ast_grep.rs  bash.rs  edit.rs  git.rs  glob.rs  grep.rs  lib.rs  read.rs  registry.rs  webfetch.rs  websearch.rs  write.rs
crates/zuc1fer-tui/: Cargo.toml
crates/zuc1fer-tui/src/: ascii_art.rs  lib.rs
docs/: architecture.md  contributing.md
scripts/: gen_ouroboros_edge.py  ouroboros_ascii.txt
src/: main.rs
