[package]
name = "ophis"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ophis"
path = "src/main.rs"

[dependencies]
ophis-core = { path = "crates/ophis-core" }
ophis-llm = { path = "crates/ophis-llm" }
ophis-tools = { path = "crates/ophis-tools" }
ophis-tui = { path = "crates/ophis-tui" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
ratatui = "0.29"
crossterm = "0.28"
serde_json.workspace = true
async-trait.workspace = true

[workspace]
resolver = "2"
members = [
    "crates/ophis-core",
    "crates/ophis-tools",
    "crates/ophis-llm",
    "crates/ophis-tui",
    "crates/ophis-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ophis"]
repository = "https://github.com/zuc1fer/ophis"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
secrecy = { version = "0.10", features = ["serde"] }
tokio-util = "0.7"
dirs = "6"
toml = "0.8"
