[package]
name = "ophis-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
reqwest.workspace = true
secrecy.workspace = true
futures.workspace = true
tokio-util.workspace = true
chrono.workspace = true
