[package]
name = "ophis-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
regex.workspace = true
futures.workspace = true
git2 = "0.20"
chrono.workspace = true
reqwest.workspace = true
html2text = "0.6"
base64 = "0.22"
ignore = "0.4"
grep = "0.3"
globset = "0.4"

[dev-dependencies]
tempfile = "3"
