[package]
name = "ophis-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true

ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"
syntect = { version = "5", default-features = false, features = ["parsing", "default-fancy", "default-themes"] }



ophis-core = { path = "../ophis-core" }
ophis-llm = { path = "../ophis-llm" }
