[package]
name = "zuc1fer-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
async-trait.workspace = true
dirs.workspace = true
futures.workspace = true
toml.workspace = true

zuc1fer-tools = { path = "../zuc1fer-tools" }
zuc1fer-llm = { path = "../zuc1fer-llm" }
zuc1fer-search = { path = "../zuc1fer-search" }
