[package]
name = "zuc1fer-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
async-trait.workspace = true
dirs.workspace = true
futures.workspace = true
toml.workspace = true

zuc1fer-tools = { path = "../zuc1fer-tools" }
zuc1fer-llm = { path = "../zuc1fer-llm" }
zuc1fer-mcp = { path = "../zuc1fer-mcp" }
rusqlite = { version = "0.32", features = ["bundled"] }
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tantivy = "0.22"
notify = "7"
lsp-types = "0.97"
