[package]
name = "zuc1fer-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
regex.workspace = true
futures.workspace = true

[dev-dependencies]
tempfile = "3"
