[package]
name = "zuc1fer-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true

zuc1fer-core = { path = "../zuc1fer-core" }
zuc1fer-llm = { path = "../zuc1fer-llm" }
